--- a/Serialization/Nintendo.Layout/Renderings/Nintendo/Footer.yml
+++ b/Serialization/Nintendo.Layout/Renderings/Nintendo/Footer.yml
@@ -5,6 +5,10 @@ Template: "99f8905d-4a87-4eb8-9f8b-a9bebfb3add6"
 Path: /sitecore/layout/Renderings/Nintendo/Footer
 DB: master
 SharedFields:
+- ID: "308e88f5-cd6e-4f8f-bafe-95a47dedefdc"
+  Hint: Editable
+  Type: Checkbox
+  Value: 1
 - ID: "51b435bc-f7b9-478a-9c51-52916af96ff5"
   Hint: Path
   Value: /Views/Shared/Footer.cshtml
