--- a/Serialization/Nintendo.Templates/BranchTemplates/Nintendo/Webpage/_name/Assets.yml
+++ b/Serialization/Nintendo.Templates/BranchTemplates/Nintendo/Webpage/_name/Assets.yml
@@ -6,6 +6,10 @@ Path: /sitecore/templates/Branches/Nintendo/Webpage/$name/Assets
 DB: master
 Languages:
 - Language: en
+  Fields:
+  - ID: "b5e02ad9-d56f-4c41-a065-a133db87bdeb"
+    Hint: __Display name
+    Value: 
   Versions:
   - Version: 1
     Fields:
