--- a/Serialization/Nintendo.Templates/Templates/Nintendo/Products/Game.yml
+++ b/Serialization/Nintendo.Templates/Templates/Nintendo/Products/Game.yml
@@ -11,7 +11,7 @@ SharedFields:
 - ID: "12c33f3f-86c5-43a5-aeb4-5598cec45116"
   Hint: __Base template
   Type: tree list
-  Value: 
+  Value: "{68510961-6F07-4F5A-B0D7-9B117FA03E94}"
 - ID: "f7d48a55-2158-4f02-9356-756654404f73"
   Hint: __Standard values
   Value: "{E82498EB-E358-4497-812C-48073833B86D}"
