--- a/NintendoDemo/App_Config/Include/Unicorn/Nintendo.Content.config
+++ b/NintendoDemo/App_Config/Include/Unicorn/Nintendo.Content.config
@@ -41,7 +41,7 @@
 						for example <include path="/sitecore/templates/$(layer)/$(module)" /> on the predicate. The base configuration will have 'abstract="true"' on the root element, and
 						inheritors will have 'extends="AbstractConfigName"' on their root element.
 				-->
-				<configuration name="Nintendo.Content" description="Demo content for solution.">
+				<configuration name="Nintendo.Content" description="Demo content for solution." dependencies="Nintendo.Templates">
 					<predicate>
 						<!--
 							PREDICATE
