--- a/Serialization/Nintendo.Content/Content/Nintendo/Marketing/Home.yml
+++ b/Serialization/Nintendo.Content/Content/Nintendo/Marketing/Home.yml
@@ -23,8 +23,14 @@ Languages:
           <d
             id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}">
             <r
-              uid="{4FB648CC-BADF-4B9A-82E8-7C8F2F843250}"
+              uid="{9BCD267B-098F-4453-9E86-083749FDD830}"
               p:before="*"
+              s:ds="{80174E7A-20D1-45D9-9EDA-5026E5DBEA46}"
+              s:id="{19F04159-6CA1-492E-A26F-E42EDDAB4E44}"
+              s:ph="body-content" />
+            <r
+              uid="{4FB648CC-BADF-4B9A-82E8-7C8F2F843250}"
+              p:after="r[@uid='{9BCD267B-098F-4453-9E86-083749FDD830}']"
               s:id="{5F29F537-9003-4587-9411-247AECC3CE4C}"
               s:ph="footer-content" />
             <r
