--- a/Serialization/Nintendo.Layout/Renderings/Nintendo/Console Detail.yml
+++ b/Serialization/Nintendo.Layout/Renderings/Nintendo/Console Detail.yml
@@ -24,7 +24,9 @@ SharedFields:
 - ID: "e441abe7-2ca3-4640-ae26-3789967925d7"
   Hint: Compatible Renderings
   Type: Treelist
-  Value: "{B1BE5C9D-99BF-4850-B0E0-2C3763927F02}"
+  Value: |
+    {B1BE5C9D-99BF-4850-B0E0-2C3763927F02}
+    {31275A73-1866-4DB8-8C26-F2ACA42CD77A}
 - ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
   Hint: Controller
   Value: Console
